--- a/Labs/Labs.csproj
+++ b/Labs/Labs.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Update="Forms\DialogInputForLab5Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Update="Forms\FormLab5.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
